--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mustafa Özgen - Portfolio</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-        h1 { color: #333; }
-        p { color: #666; }
-    </style>
+    <title>MOZ Studios</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Merhaba! Ben Mustafa Özgen</h1>
-    <p>Unity Asset Store için profesyonel 3D & 2D varlıklar geliştiriyorum.</p>
-    <a href="https://assetstore.unity.com/publishers/XXXXX" target="_blank">
-        Mağazamı Ziyaret Et
-    </a>
+    <div class="container">
+        <div class="logo">MOZ</div>
+        <div class="tagline">High Quality, Unlimited Creativity!</div>
+        <div class="description">
+            <p>Our Unity Asset Store shop provides top-quality 3D & 2D assets, tools, environments, add-ons, templates, and VFX to enhance your game and digital projects. Designed for professionals, our diverse range of assets helps you accelerate your workflow and achieve the best results.</p>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
