--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">MOZ</div>
+        <div class="logo-container">
+            <img src="img/Logo_LogoV1.png" alt="MOZ Studios Logo" class="logo">
+        </div>
         <div class="tagline">High Quality, Unlimited Creativity!</div>
         <div class="description">
             <p>Our Unity Asset Store shop provides top-quality 3D & 2D assets, tools, environments, add-ons, templates, and VFX to enhance your game and digital projects. Designed for professionals, our diverse range of assets helps you accelerate your workflow and achieve the best results.</p>
